<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.result.ResultFragment">

    <TextView
        style="@style/tv_result_style"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginVertical="25dp"
        android:text="@string/result" />

    <ImageView
        android:id="@+id/iv_correct"
        android:layout_width="124dp"
        android:layout_height="124dp"
        android:layout_gravity="center|top"
        android:layout_marginTop="71dp"
        android:contentDescription="@string/good"
        android:src="@drawable/ic_correct"
        android:visibility="gone"
        android:layout_marginBottom="52dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        app:cardCornerRadius="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="46dp">

            <TextView
                android:id="@+id/tv_category_result"
                style="@style/tv_result_style"
                android:layout_marginTop="22dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/category"
                style="@style/tv_sub_result_style"
                android:layout_marginTop="40dp"
                android:text="@string/difficulty"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_category_result" />

            <TextView
                android:id="@+id/correctAns"
                style="@style/tv_sub_result_style"
                android:layout_marginTop="40dp"
                android:text="@string/correct_answers"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_category_result" />

            <TextView
                android:id="@+id/result"
                style="@style/tv_sub_result_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/result"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_category_result" />

            <TextView
                android:id="@+id/tv_diff"
                style="@style/tv_sub_result_style"
                android:textColor="@color/black_500"
                app:layout_constraintEnd_toEndOf="@id/category"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/category" />

            <TextView
                android:id="@+id/tv_correctAns"
                style="@style/tv_sub_result_style"
                android:textColor="@color/black_500"
                app:layout_constraintEnd_toEndOf="@id/correctAns"
                app:layout_constraintStart_toStartOf="@id/correctAns"
                app:layout_constraintTop_toBottomOf="@id/category" />

            <TextView
                android:id="@+id/tv_result"
                style="@style/tv_sub_result_style"
                android:textColor="@color/black_500"
                app:layout_constraintEnd_toEndOf="@id/result"
                app:layout_constraintStart_toStartOf="@id/result"
                app:layout_constraintTop_toBottomOf="@id/category" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/finish"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="125dp"
        android:background="@drawable/bg_skip_btn"
        android:backgroundTint="@color/green_200"
        android:gravity="center"
        android:text="@string/finish"
        android:textColor="@color/white" />
</FrameLayout>